tests/integration/fail/record_contract_empty_record.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
{ a = 1 } | {}
